# monthly_challenge_1_dec_2015_procedural_pirate_map

./: .gitignore  piratemap.cabal  stack.yaml
src/: Canvas.hs  Constants.hs  Helper.hs  Main.hs  ca.hs  noise.hs
src/CA/: rules.hs
