name:                piratemap
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/fvandepitte/piratemap#readme
author:              Frederiek Vandepitte
maintainer:          frederiek.vandepitte@gmail.com
category:            Procedural-Generation
build-type:          Simple
cabal-version:       >=1.10

executable piratemap
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N -auto-all -caf-all
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Rasterific
                     , bytestring >=0.10.2
                     , containers
                     , dlist >=0.6
                     , FontyFruity ==0.5.*
                     , free >=4.7
                     , JuicyPixels >=3.2
                     , linear >=1.3
                     , mtl >=1.9
                     , primitive >=0.5
                     , vector >=0.9
                     , vector-algorithms >=0.3
                     , random